# app/Http/Actions/Api/Files/Upload/Action.php
@@ -14,8 +14,25 @@ class Action
     {
         return FileResource::collection(array_map(function ($file) use ($request, $files) {
             $indexed = true;
-            [$id, $realpath, $url, $content] = $files->store($file->getContent(), $file->getClientOriginalExtension(), $request->has('field'));
-            return File::create(compact('id', 'realpath', 'url', 'indexed', 'content'));
+            [$id, $realpath, $url, $content] = $files->store(
+                $file->getContent(),
+                $file->getClientOriginalExtension(),
+                $request->has('field')
+            );
+
+            $name = $file->getClientOriginalName();
+            $extension = $file->getClientOriginalExtension();
+
+            return File::create(compact(
+                'id',
+                'realpath',
+                'url',
+                'indexed',
+                'content',
+                'name',
+                'extension',
+            ));
+
         }, $request->file('files')));
     }
 }
